# OHara-Rudy-2011

./: Makefile.am  Makefile.in  README  README.md
ORd_original/: Makefile.am  Makefile.in  README.md  configure  configure.ac  temp
ORd_original/ORd/: README.md
ORd_original/src/: exptable.c  ord.c  syspara.h
src/: currents.c  input_para.c  syspara.h  system.c  val_constants.c
